website/static/home_style.css
*{
    font-family: 'Ubuntu', sans-serif;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
}

.background{
    margin-left: 20%;
    position: absolute;
    z-index: -1;
    height: 100vh;
}

.background--custom {
    background-color: #FFFFFF;
    width: 100vw;
    height: 100vh;
    position: absolute;
    overflow: hidden;
    z-index: -2;
    top: 0;
    left: 0;
}

canvas#canvas {
    z-index: -1;
    position: absolute;
    width: 100%;
    height: 100%;
    transform: rotate(0deg) scale(1) translateY(0%);
    --gradient-color-1: #DCF3AA;
    --gradient-color-2: #BEFFF3;
    --gradient-color-3: #93EAFF;
    --gradient-color-4: #E0F5FA;
    --gradient-speed: 0.000012;
}



#main-wrapper{
    display: flex;
    justify-content: center;
}

#main{
    width: 1100px;
    padding: 20px 20px 0px 20px;
}

#logo{
    width: 150px;
}


.section1{
    margin-top: 20px;
    display: flex;
    align-items: center;
}

.waitlist{
    position: relative;
    width: 50%;
    margin-right: 5%;
}

.waitlist-title{
    font-size: 45;
    font-weight: 500;
    margin-bottom: 20px;
}

.waitlist-text{
    color: #7a7a7a;
    font-size: 20;
    font-weight: 300;
    margin-bottom: 10px;
    line-height: 1.5;
}

.waitlist-signup{
    display: flex;
    align-items: center;
}

.waitlist-input{
    border: 2px solid #e7e7e7;
    color: black;
    border-radius: 10px;
    height: 40px;
    padding: 5px 10px;
    font-size: 18;
    font-weight: 300;
    width: calc(70% - 15px);
    margin: 10px 1px;
    margin-right: 5px;
    box-shadow: 0px 2px 5px 1px rgba(0,0,0,0.05);
    transition: 0.2s;
}

.waitlist-input:hover{
    box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.1);
}

.waitlist-input:focus{
    box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.1);
    outline: None;
}

.waitlist-button{
    border: 2px solid #26c8aa;
    background-color: #2BD6B7;
    color: white;
    border-radius: 10px;
    padding: 5px 5px;
    margin: 0px 1px 10px 1px;
    height: 40px;
    text-align: center;
    font-size: 18;
    font-weight: 300;
    width: 30%;
    cursor: pointer;
    box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.05);
    transition: 0.2s;
}

.waitlist-button:hover{
    box-shadow: 0px 1px 5px 1px rgba(0,0,0,0.1);
    background-color: #26c8aa;
}

.waitlist-competition{
    color: #9f9f9f;
    font-size: 14;
    font-weight: 300;
}

.thumbnail{
    height: 80vh;
}

.university-logos{
    bottom: 30px;
    position: absolute;
}

.university-logo{
    height: 40px;
    margin-right: 20px;
}



@media screen and (max-width: 900px) {
    *{
        overflow-x: hidden;
    }

    .background{
        margin-left: 0;
        width: 100%;
        height: 100%;
    }

    .background-frame{
        display: None;
    }

    .section1{
        margin-top: 100px;
    }

    .waitlist{
        width: 100%;
        margin-right: 0;
    }

    .waitlist-title{
        font-size: 38;
    }

    .waitlist-input{
        width: 100%;
    }

    .waitlist-button{
        width: 100%;
    }

    .thumbnail{
        display: None;
    }
}

